# IK-Sim

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: Enums.hpp  Utils.hpp
include/ik-algorithms-3d/: CCD3.hpp  IKSolver3.hpp  Leg.hpp  Skeleton3.hpp
include/ik-lib/: Constants.hpp  IkArm.hpp  IkNode.hpp  IkSolver.hpp  IkTree.hpp
include/ik-lib/math/: Vector3.hpp  Wrappers.hpp
include/simulation/: Crane.hpp  Simulation.hpp  Tracer.hpp
src/: CMakeLists.txt
src/ik-algorithms-3d/: CCD3.cpp  CMakeLists.txt  IKSolver3.cpp  Leg.cpp  Skeleton3.cpp
src/ik-lib/: CMakeLists.txt  IkArm.cpp  IkNode.cpp  IkSolver.cpp  IkTree.cpp
src/ik-lib/math/: CMakeLists.txt  Vector3.cpp
src/simulation/: CMakeLists.txt  Crane.cpp  Simulation.cpp  Tracer.cpp
tests/: CMakeLists.txt
